# src_platform_clip-install-rm

./: CHANGELOG  Makefile.am  Makefile.in  README.md  configure  configure.ac
etc/admin/clip_install/: Makefile.am  Makefile.in  clip_install_rm_core.conf
etc/admin/clip_install/apt.conf.d/: Makefile.am  Makefile.in  debug
etc/clip_update/clip_install/: Makefile.am  Makefile.in  apt.conf.rm.apps  apt.conf.rm.core  sources.list.rm.core
scripts/: Makefile.am  Makefile.in  clip_install_rm_apps  clip_install_rm_core
