# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright © 2007-2018 ANSSI. All Rights Reserved.
AC_INIT([clip-install-rm],[2.0.1],[clipos@ssi.gouv.fr])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile etc/admin/clip_install/Makefile etc/clip_update/clip_install/Makefile etc/admin/clip_install/apt.conf.d/Makefile scripts/Makefile])
AC_OUTPUT
